Fix adventure book on top of journal spacing

--- a/src/modules/better-ui/styles/adventure.css
+++ b/src/modules/better-ui/styles/adventure.css
@@ -40,8 +40,12 @@
   left: 0;
   display: flex;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: space-between;
   background: none;
+  box-shadow: none;
+}
+
+.adventureBookPopup-adventureContainer.highlight {
   box-shadow: none;
 }
 
